added button logic for submit

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -72,7 +72,7 @@
 					Check Answer
 					</button>
 					<!-- This is where -->
-					<button type="button" ng-model="button" ng-disabled="!answerCorrect" class="btn btn-secondary btn-lg" >Submit</button>
+					<button type="button" ng-disabled="!answerCorrect" ng-click="submitLesson()" class="btn btn-secondary btn-lg" >Submit</button>
 					<!-- I think we'll need JavaScript to make this button enabled after the answer is OK-->
 					
 				
