--- a/src/main/resources/static/html/start.html
+++ b/src/main/resources/static/html/start.html
@@ -1,11 +1,13 @@
-<html>
+<html ng-app="teaching-cube">
 	<head>
 		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+		<script src="../js/script.js"></script>
 	</head>
-	<body>
+	<body ng-controller="TeachingCubeController">
 		<nav class="navbar navbar-dark bg-dark">
 			<a class="navbar-brand" href="#">The Teaching Cube</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,21 +36,26 @@
 				</ul>
 			</div>
 		</nav>
-		<div class="container">
-			<div class ="row">
-					<div class="input-group input-group-lg">
-						<div class="input-group-prepend">
-							<span class="input-group-text" id="inputGroup-sizing-lg">Username</span>
+			<div class="container">
+				<div class = "col-md"></div>
+					<div class="card">
+						<div class="input-group input-group-lg">
+							<div class="input-group-prepend">
+								<span class="input-group-text" id="inputGroup-sizing-lg">Username</span>
+							</div>
+							<input ng-model="username" type="text" class="form-control" aria-label="Username" aria-describedby="inputGroup-sizing-sm">
 						</div>
-						<input type="text" class="form-control" aria-label="Username" aria-describedby="inputGroup-sizing-sm">
-					</div>
-					<div class="input-group input-group-lg">
-						<div class="input-group-prepend">
-							<span class="input-group-text" id="inputGroup-sizing-lg">Password</span>
+						<div class="input-group input-group-lg">
+							<div class="input-group-prepend">
+								<span class="input-group-text" id="inputGroup-sizing-lg">Password</span>
+							</div>
+							<input ng-model="password" type="text" class="form-control" aria-label="Password" aria-describedby="inputGroup-sizing-sm">
 						</div>
-						<input type="text" class="form-control" aria-label="Password" aria-describedby="inputGroup-sizing-sm">
+						<button ng-click="login()" type="button" class="btn btn-primary btn-lg " >Submit</button>
 					</div>
-					<button type="button" class="btn btn-primary btn-lg " >Submit</button>
+					<div ng-show="authFailed" class="alert alert-danger" role="alert">
+						<span class="glyphicon glyphicon-remove-circle" ></span>Login failed: username or password is incorrect
+					</div>
 				</div>
 			</div>
 		</div>
